--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="This website is a login page for bots to operate as bots within the Telegram interface, providing a simple and efficient way for bots to function." />
+    <meta name="google-site-verification" content="_lFV-1cJft5bBIhpTxqa8b0Of-ATJ8u18i4pEXC22bE" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bottelegram</title>
